--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             ArrowUp, ArrowDown, Footprints, Crown, Trophy, 
             Zap, Bomb, Flag, Flame, Ghost, ShieldAlert, Pointer, Dices, Info, Medal, User, X, ChevronsUp, Users, Shield, AlertCircle, Shuffle, Gem, Biohazard, ArrowLeft, Swords,
             Gavel, ArrowLeftRight, Sparkles, Ban, MousePointer2, Target, Heart, Crosshair, Disc, Bot, Move, Grid3X3, Palette, Timer, Siren, Rewind, Swords as SwordsIcon, Coins,
-            Lock, Activity, MousePointerClick, Crosshair as Scope, Bug, List, Hash, Dice1, Dice2, Dice3, Dice4, Dice6, Anchor, Droplets, Hand
+            Lock, Activity, MousePointerClick, Crosshair as Scope, Bug, List, Hash, Dice1, Dice2, Dice3, Dice4, Dice6, Anchor, Droplets, Hand, SkipForward
         } from 'lucide-react';
 
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
@@ -1680,6 +1680,21 @@
                 }
                 return next;
             };
+            
+            // --- FIX: Force Next Turn (Manual Debug) ---
+            const forceNextTurn = async () => {
+                if (!currentRoom || !user || currentRoom.hostId !== user.uid) return;
+                try {
+                    const nextTurn = getNextTurn(currentRoom.players, currentRoom.currentTurn);
+                    await updateDoc(doc(db, 'artifacts', appId, 'public', 'data', 'matches', roomCode), {
+                        currentTurn: nextTurn,
+                        lastAction: "TURNO FORZATO DAL HOST!"
+                    });
+                    // Reset local locks just in case
+                    setIsRolling(false);
+                    setIsMoving(false);
+                } catch (e) { handleError(e); }
+            };
 
             // AUTO-BOT & DUEL BOT LOGIC
             useEffect(() => {
@@ -1933,6 +1948,13 @@
                                  <span>BOT: {genericBotMode === 'manual' ? 'MANUALE' : 'AUTO'}</span>
                              </button>
                          </div>
+                    )}
+
+                    {/* FORCE TURN BUTTON (HOST ONLY) */}
+                    {currentRoom?.hostId === user?.uid && view === 'game' && (
+                        <button onClick={forceNextTurn} className="bg-red-500/20 hover:bg-red-500/40 text-red-200 border border-red-500/50 p-2 rounded-lg ml-2" title="Forza Prossimo Turno">
+                            <SkipForward size={20}/>
+                        </button>
                     )}
 
                     {currentRoom && view !== 'game' && <div className="font-mono bg-indigo-800 px-2 py-1 rounded text-xs flex items-center gap-2"><span>ROOM: {currentRoom.code}</span></div>}
