--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ specials: {
 23: { type: 'BOOST', val: -2, name: '-2', icon: <ArrowDown />, desc: "Scivolata nel fango! Torni indietro di 2 caselle." },
 27: { type: 'BOOST', val: -1, name: '-1', icon: <ArrowDown />, desc: "Vento contrario! Torni indietro di 1 casella." },
 36: { type: 'BOOST', val: 3, name: '+3', icon: <Zap />, desc: "Sprint! Corri avanti di 3 caselle." },
-38: { type: 'DOUBLE', name: 'Raddoppia', icon: <ChevronsUp />, desc: "Super Bonus! Avanzi ancora del risultato che hai appena fatto x2!" },
+38: { type: 'BOOST', val: 8, name: '+8', icon: <Zap />, desc: "Scatto improvviso! Avanzi di 8 caselle." },
 40: { type: 'TAIL', name: 'In Coda', icon: <Footprints />, desc: "Strategia! Ti teletrasporti subito dietro al giocatore che ti precede." },
 46: { type: 'BOOST', val: 3, name: '+3', icon: <Zap />, desc: "Volata finale! +3 caselle." },
 50: { type: 'BOOST', val: -2, name: '-2', icon: <ArrowDown />, desc: "Scivolata nel fango! Torni indietro di 2 caselle." },
