--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ background-size: 10px 10px;
 <body class="bg-slate-50 text-slate-900">
 <div id="root"></div>
 
-<script type="text/babel" data-type="module">
+<script type="text/babel" data-presets="env,react">
 import React, { useState, useEffect, useRef } from 'react';
 import { createRoot } from 'react-dom/client';
 import { 
